--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "Pihe",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cloudinary": "^1.29.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
