--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
+    "material-ui-confirm": "^3.0.4",
     "notistack": "^2.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
