--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "notistack": "^2.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^14.2.1",
     "react-helmet-async": "^1.3.0",
     "react-lazy-load-image-component": "^1.5.4",
     "react-redux": "^8.0.1",
