--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.6.2",
+    "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -20,6 +21,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-dropzone": "^14.2.1",
+    "react-facebook-login": "^4.1.1",
     "react-helmet-async": "^1.3.0",
     "react-lazy-load-image-component": "^1.5.4",
     "react-redux": "^8.0.1",
