--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.6.2",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
