--- a/server/package.json
+++ b/server/package.json
@@ -14,15 +14,18 @@
   "author": "Pihe",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.29.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "mongoose-slug-generator": "^1.0.4",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "qs": "^6.10.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
