--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
+    "xml2js": "^0.4.23",
     "yup": "^0.32.11"
   },
   "scripts": {
