--- a/client/package.json
+++ b/client/package.json
@@ -10,20 +10,27 @@
     "@mui/material": "^5.6.2",
     "@paypal/react-paypal-js": "^7.8.1",
     "@react-oauth/google": "^0.2.6",
+    "@react-pdf/renderer": "^2.2.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^0.27.2",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "material-ui-confirm": "^3.0.4",
     "notistack": "^2.0.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "process": "^0.11.10",
+    "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
     "react-facebook-login": "^4.1.1",
     "react-helmet-async": "^1.3.0",
+    "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.4",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
@@ -31,14 +38,15 @@
     "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4",
-    "xml2js": "^0.4.23",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
