--- a/manage/package.json
+++ b/manage/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.6",
     "antd": "^4.22.0",
     "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -25,6 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/styled-components": "^5.1.25",
     "antd-theme-webpack-plugin": "^1.3.9",
     "babel-plugin-import": "^1.13.5",
