--- a/manage/package.json
+++ b/manage/package.json
@@ -14,19 +14,24 @@
     "@types/react-dom": "^18.0.6",
     "antd": "^4.22.0",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
+    "@types/react-scroll": "^1.8.4",
     "@types/styled-components": "^5.1.25",
     "antd-theme-webpack-plugin": "^1.3.9",
     "babel-plugin-import": "^1.13.5",
