--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "mongoose-delete": "^0.5.4",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.4",
     "qs": "^6.10.5"
