--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.5.2",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.4",
     "web-vitals": "^2.1.4",
