--- a/manage/package.json
+++ b/manage/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "redux-saga": "^1.1.3",
+    "socket.io-client": "^4.5.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
