--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "mongoose-delete": "^0.5.4",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.4",
-    "qs": "^6.10.5"
+    "qs": "^6.10.5",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
